feat: Add email security management to Defender section
ADDED EMAIL SECURITY FEATURES:
- Quarantined email management with release/delete capabilities
- Domain whitelist/blacklist (allow/block list) management
- Sender whitelist/blacklist management
- Real-time quarantine filtering by reason (Spam, Phishing, Malware)

DEFENDER SERVICE ENHANCEMENTS:
- getQuarantinedMessages() - Retrieve quarantined emails
- releaseQuarantinedMessage() - Release messages from quarantine
- deleteQuarantinedMessage() - Permanently delete quarantined messages
- getTenantAllowBlockList() - Get all allow/block list entries
- addDomainToAllowList() - Whitelist domains
- addDomainToBlockList() - Blacklist domains
- removeDomainFromAllowList() - Remove from whitelist
- removeDomainFromBlockList() - Remove from blacklist
- addSenderToAllowList() - Whitelist email senders
- addSenderToBlockList() - Blacklist email senders
- Mock data for demo mode with 3 quarantined messages and sample lists

UI COMPONENTS:
- New 'Quarantined Email' tab with filtering and search
- New 'Allow/Block Lists' tab with domain and sender management
- Modal dialogs for adding domains and senders
- Color-coded lists (green for allow, red for block)
- Message threat type badges and severity indicators
- Release and delete actions for quarantined messages
- Notes field for documenting list entries

TRANSLATIONS:
- Complete English and Spanish translations for email security
- Quarantine reasons, actions, and list management terms

GRAPH API ENDPOINTS:
- /security/threatSubmission/emailThreats - Quarantined messages
- /security/tenantAllowBlockList/* - Domain and sender lists

Required Permission: SecurityActions.ReadWrite.All

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -145,6 +145,8 @@
     "subtitle": "Monitor and respond to security threats across your organization",
     "alerts": "Security Alerts",
     "incidents": "Security Incidents",
+    "quarantine": "Quarantined Email",
+    "allowBlockLists": "Allow/Block Lists",
     "secureScore": "Secure Score",
     "vulnerabilities": "Vulnerabilities",
     "recommendations": "Security Recommendations",
@@ -153,7 +155,10 @@
       "high": "High",
       "medium": "Medium",
       "low": "Low",
-      "informational": "Informational"
+      "informational": "Informational",
+      "spam": "Spam",
+      "phishing": "Phishing",
+      "malware": "Malware"
     },
     "status": {
       "new": "New",
@@ -165,6 +170,7 @@
       "severity": "Severity",
       "status": "Status",
       "timeRange": "Time Range",
+      "quarantineReason": "Quarantine Reason",
       "all": "All"
     },
     "timeRanges": {
@@ -173,9 +179,16 @@
       "30days": "Last 30 days",
       "90days": "Last 90 days"
     },
+    "quarantineReasons": {
+      "spam": "Spam",
+      "phishing": "Phishing",
+      "malware": "Malware",
+      "highConfidencePhishing": "High Confidence Phishing"
+    },
     "loading": "Loading security data...",
     "noAlerts": "No alerts found",
     "noIncidents": "No incidents found",
+    "noQuarantinedMessages": "No quarantined messages found",
     "noRecommendations": "No recommendations available",
     "noVulnerabilities": "No vulnerabilities detected",
     "refresh": "Refresh",
@@ -213,7 +226,48 @@
     "configure": "Configure",
     "updateSuccess": "Updated successfully",
     "updateError": "Failed to update",
-    "loadError": "Failed to load data"
+    "loadError": "Failed to load data",
+    "quarantinedMessages": "Quarantined Messages",
+    "from": "From",
+    "to": "To",
+    "subject": "Subject",
+    "received": "Received",
+    "size": "Size",
+    "threatTypes": "Threat Types",
+    "release": "Release",
+    "delete": "Delete",
+    "releaseSuccess": "Message released successfully",
+    "deleteSuccess": "Message deleted successfully",
+    "domainManagement": "Domain Management",
+    "senderManagement": "Sender Management",
+    "allowList": "Allow List",
+    "blockList": "Block List",
+    "allowedDomains": "Allowed Domains",
+    "blockedDomains": "Blocked Domains",
+    "allowedSenders": "Allowed Senders",
+    "blockedSenders": "Blocked Senders",
+    "addDomain": "Add Domain",
+    "addSender": "Add Sender",
+    "removeDomain": "Remove Domain",
+    "removeSender": "Remove Sender",
+    "domain": "Domain",
+    "sender": "Sender",
+    "notes": "Notes",
+    "optional": "Optional",
+    "listType": "List Type",
+    "whitelist": "Whitelist",
+    "blacklist": "Blacklist",
+    "cancel": "Cancel",
+    "add": "Add",
+    "manageAllowedBlocked": "Manage allowed and blocked domains",
+    "manageAllowedBlockedSenders": "Manage allowed and blocked email senders",
+    "noAllowedDomains": "No allowed domains",
+    "noBlockedDomains": "No blocked domains",
+    "noAllowedSenders": "No allowed senders",
+    "noBlockedSenders": "No blocked senders",
+    "addedOn": "Added",
+    "reasonForAdding": "Reason for adding this domain...",
+    "reasonForAddingSender": "Reason for adding this sender..."
   },
   "errors": {
     "generic": "An error occurred. Please try again.",
