--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -115,6 +115,8 @@
     "subtitle": "Monitorear y responder a amenazas de seguridad en toda su organización",
     "alerts": "Alertas de Seguridad",
     "incidents": "Incidentes de Seguridad",
+    "quarantine": "Correo en Cuarentena",
+    "allowBlockLists": "Listas de Permitir/Bloquear",
     "secureScore": "Puntuación de Seguridad",
     "vulnerabilities": "Vulnerabilidades",
     "recommendations": "Recomendaciones de Seguridad",
@@ -123,7 +125,10 @@
       "high": "Alto",
       "medium": "Medio",
       "low": "Bajo",
-      "informational": "Informativo"
+      "informational": "Informativo",
+      "spam": "Correo no deseado",
+      "phishing": "Phishing",
+      "malware": "Malware"
     },
     "status": {
       "new": "Nuevo",
@@ -135,6 +140,7 @@
       "severity": "Gravedad",
       "status": "Estado",
       "timeRange": "Rango de Tiempo",
+      "quarantineReason": "Razón de Cuarentena",
       "all": "Todos"
     },
     "timeRanges": {
@@ -143,9 +149,16 @@
       "30days": "Últimos 30 días",
       "90days": "Últimos 90 días"
     },
+    "quarantineReasons": {
+      "spam": "Correo no deseado",
+      "phishing": "Phishing",
+      "malware": "Malware",
+      "highConfidencePhishing": "Phishing de Alta Confianza"
+    },
     "loading": "Cargando datos de seguridad...",
     "noAlerts": "No se encontraron alertas",
     "noIncidents": "No se encontraron incidentes",
+    "noQuarantinedMessages": "No se encontraron mensajes en cuarentena",
     "noRecommendations": "No hay recomendaciones disponibles",
     "noVulnerabilities": "No se detectaron vulnerabilidades",
     "refresh": "Actualizar",
@@ -183,7 +196,48 @@
     "configure": "Configurar",
     "updateSuccess": "Actualizado exitosamente",
     "updateError": "Error al actualizar",
-    "loadError": "Error al cargar datos"
+    "loadError": "Error al cargar datos",
+    "quarantinedMessages": "Mensajes en Cuarentena",
+    "from": "De",
+    "to": "Para",
+    "subject": "Asunto",
+    "received": "Recibido",
+    "size": "Tamaño",
+    "threatTypes": "Tipos de Amenaza",
+    "release": "Liberar",
+    "delete": "Eliminar",
+    "releaseSuccess": "Mensaje liberado exitosamente",
+    "deleteSuccess": "Mensaje eliminado exitosamente",
+    "domainManagement": "Gestión de Dominios",
+    "senderManagement": "Gestión de Remitentes",
+    "allowList": "Lista de Permitidos",
+    "blockList": "Lista de Bloqueados",
+    "allowedDomains": "Dominios Permitidos",
+    "blockedDomains": "Dominios Bloqueados",
+    "allowedSenders": "Remitentes Permitidos",
+    "blockedSenders": "Remitentes Bloqueados",
+    "addDomain": "Agregar Dominio",
+    "addSender": "Agregar Remitente",
+    "removeDomain": "Eliminar Dominio",
+    "removeSender": "Eliminar Remitente",
+    "domain": "Dominio",
+    "sender": "Remitente",
+    "notes": "Notas",
+    "optional": "Opcional",
+    "listType": "Tipo de Lista",
+    "whitelist": "Lista Blanca",
+    "blacklist": "Lista Negra",
+    "cancel": "Cancelar",
+    "add": "Agregar",
+    "manageAllowedBlocked": "Gestionar dominios permitidos y bloqueados",
+    "manageAllowedBlockedSenders": "Gestionar remitentes permitidos y bloqueados",
+    "noAllowedDomains": "No hay dominios permitidos",
+    "noBlockedDomains": "No hay dominios bloqueados",
+    "noAllowedSenders": "No hay remitentes permitidos",
+    "noBlockedSenders": "No hay remitentes bloqueados",
+    "addedOn": "Agregado",
+    "reasonForAdding": "Razón para agregar este dominio...",
+    "reasonForAddingSender": "Razón para agregar este remitente..."
   },
   "errors": {
     "generic": "Ocurrió un error",
