Expand i18n translations and implement in NotFound component
- Added comprehensive translation keys for:
  * Users (search, details, status, devices, groups, licenses)
  * Settings (Azure config, preferences, security)
  * Devices (management, actions, compliance)
  * Offboarding (wizard steps, actions, results)
  * Onboarding (wizard steps, account creation)
  * Transfer (types, actions, notifications)
  * Common (extended with more action words)
  * Errors (page not found messages)

- Implemented i18n in NotFound component:
  * Added useTranslation hook
  * Replaced all hardcoded strings with t() calls
  * Added dark mode support

Translation keys ready for use in:
- UserSearch, UserDetail, UserDetailModal
- Settings
- DeviceManagement
- OffboardingWizard
- OnboardingWizard
- TransferWizard
- ScheduledOffboarding
- IntuneManagement

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,7 +26,30 @@
     "selectAll": "Select All",
     "clearAll": "Clear All",
     "noResults": "No results found",
-    "actions": "Actions"
+    "actions": "Actions",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "ok": "OK",
+    "apply": "Apply",
+    "reset": "Reset",
+    "clear": "Clear",
+    "select": "Select",
+    "selected": "Selected",
+    "show": "Show",
+    "hide": "Hide",
+    "more": "More",
+    "less": "Less",
+    "all": "All",
+    "none": "None",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "thisWeek": "This Week",
+    "thisMonth": "This Month",
+    "required": "Required",
+    "optional": "Optional",
+    "enabled": "Enabled",
+    "disabled": "Disabled"
   },
   "nav": {
     "dashboard": "Dashboard",
@@ -59,13 +82,56 @@
     "userSearch": "User Search",
     "searchPlaceholder": "Search by name or email...",
     "displayName": "Display Name",
+    "name": "Name",
     "email": "Email",
     "department": "Department",
     "jobTitle": "Job Title",
     "status": "Status",
     "lastSignIn": "Last Sign In",
     "viewDetails": "View Details",
-    "noUsersFound": "No users found"
+    "noUsersFound": "No users found",
+    "allUsers": "All Users",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "accountEnabled": "Account Enabled",
+    "accountDisabled": "Account Disabled",
+    "searchResults": "Search Results",
+    "showing": "Showing",
+    "of": "of",
+    "users": "users",
+    "offboard": "Offboard",
+    "onboard": "Onboard",
+    "filterByStatus": "Filter by status",
+    "all": "All",
+    "loadingUsers": "Loading users...",
+    "userDetails": "User Details",
+    "overview": "Overview",
+    "signInLogs": "Sign-in Logs",
+    "authMethods": "Authentication Methods",
+    "devices": "Devices",
+    "groups": "Groups",
+    "licenses": "Licenses",
+    "userPrincipalName": "User Principal Name",
+    "phoneNumber": "Phone Number",
+    "officeLocation": "Office Location",
+    "manager": "Manager",
+    "memberOf": "Member Of",
+    "assignedLicenses": "Assigned Licenses",
+    "resetPassword": "Reset Password",
+    "disableAccount": "Disable Account",
+    "enableAccount": "Enable Account",
+    "editUser": "Edit User",
+    "deleteUser": "Delete User",
+    "active": "Active",
+    "signInLocation": "Sign-in Location",
+    "signInTime": "Sign-in Time",
+    "ipAddress": "IP Address",
+    "deviceName": "Device Name",
+    "operatingSystem": "Operating System",
+    "noSignInLogs": "No sign-in logs available",
+    "noDevices": "No devices found",
+    "noGroups": "No groups found",
+    "noLicenses": "No licenses assigned"
   },
   "onboarding": {
     "title": "Employee Onboarding",
@@ -76,17 +142,40 @@
     "deviceAssignment": "Device Assignment",
     "accessRights": "Access Rights",
     "review": "Review",
+    "results": "Results",
     "firstName": "First Name",
     "lastName": "Last Name",
+    "email": "Email Address",
+    "displayName": "Display Name",
+    "userPrincipalName": "User Principal Name",
     "startDate": "Start Date",
+    "department": "Department",
+    "jobTitle": "Job Title",
+    "manager": "Manager",
+    "officeLocation": "Office Location",
+    "phoneNumber": "Phone Number",
     "assignLicense": "Assign License",
     "assignDevice": "Assign Device",
     "grantAccess": "Grant Access",
-    "completeOnboarding": "Complete Onboarding"
+    "completeOnboarding": "Complete Onboarding",
+    "createAccount": "Create Account",
+    "selectLicenses": "Select Licenses",
+    "selectGroups": "Select Groups",
+    "assignManager": "Assign Manager",
+    "executing": "Creating account...",
+    "onboardingComplete": "Onboarding Complete",
+    "onboardingFailed": "Onboarding Failed",
+    "userCreated": "User account created successfully",
+    "viewNewUser": "View New User"
   },
   "offboarding": {
     "title": "Employee Offboarding",
     "selectEmployee": "Select Employee",
+    "selectUser": "Select User",
+    "chooseTemplate": "Choose Template",
+    "customizeActions": "Customize Actions",
+    "reviewAndExecute": "Review & Execute",
+    "results": "Results",
     "offboardingDate": "Offboarding Date",
     "lastDay": "Last Day",
     "revokeAccess": "Revoke Access",
@@ -96,19 +185,100 @@
     "disableAccount": "Disable Account",
     "completeOffboarding": "Complete Offboarding",
     "scheduledFor": "Scheduled for",
-    "viewScheduled": "View Scheduled Offboarding"
+    "viewScheduled": "View Scheduled Offboarding",
+    "searchUsers": "Search for a user to offboard",
+    "selectedUser": "Selected User",
+    "offboardingOptions": "Offboarding Options",
+    "accountActions": "Account Actions",
+    "mailboxActions": "Mailbox Actions",
+    "deviceActions": "Device Actions",
+    "dataActions": "Data Actions",
+    "convertToShared": "Convert to Shared Mailbox",
+    "setForwarding": "Set Email Forwarding",
+    "setAutoReply": "Set Auto-Reply",
+    "removeGroups": "Remove from Groups",
+    "removeLicenses": "Remove Licenses",
+    "wipeDevices": "Wipe Devices",
+    "retireDevices": "Retire Devices",
+    "transferFiles": "Transfer OneDrive Files",
+    "transferTo": "Transfer To",
+    "selectManager": "Select Manager",
+    "autoReplyMessage": "Auto-Reply Message",
+    "executeOffboarding": "Execute Offboarding",
+    "executing": "Executing...",
+    "offboardingComplete": "Offboarding Complete",
+    "offboardingFailed": "Offboarding Failed",
+    "exportPDF": "Export PDF Report",
+    "downloadReport": "Download Report",
+    "actionResults": "Action Results",
+    "successfulActions": "Successful Actions",
+    "failedActions": "Failed Actions",
+    "viewDetails": "View Details"
+  },
+  "transfer": {
+    "title": "Employee Transfer",
+    "selectEmployee": "Select Employee",
+    "transferType": "Transfer Type",
+    "departmentTransfer": "Department Transfer",
+    "roleChange": "Role Change",
+    "managerChange": "Manager Change",
+    "locationTransfer": "Location Transfer",
+    "selectTransferType": "Select Transfer Type",
+    "newDepartment": "New Department",
+    "newJobTitle": "New Job Title",
+    "newManager": "New Manager",
+    "newLocation": "New Office Location",
+    "effectiveDate": "Effective Date",
+    "transferNotes": "Transfer Notes",
+    "reviewTransfer": "Review Transfer",
+    "executeTransfer": "Execute Transfer",
+    "executing": "Processing transfer...",
+    "transferComplete": "Transfer Complete",
+    "transferFailed": "Transfer Failed",
+    "updatePermissions": "Update Permissions",
+    "notifyStakeholders": "Notify Stakeholders",
+    "transferData": "Transfer Data",
+    "updateGroups": "Update Group Memberships"
   },
   "devices": {
     "title": "Device Management",
     "deviceName": "Device Name",
     "deviceType": "Device Type",
     "owner": "Owner",
+    "user": "User",
     "lastSeen": "Last Seen",
+    "lastSyncDateTime": "Last Sync",
     "compliance": "Compliance Status",
+    "complianceState": "Compliance",
     "compliant": "Compliant",
     "nonCompliant": "Non-Compliant",
     "managedBy": "Managed By",
-    "enrollmentDate": "Enrollment Date"
+    "enrollmentDate": "Enrollment Date",
+    "manufacturer": "Manufacturer",
+    "model": "Model",
+    "osVersion": "OS Version",
+    "operatingSystem": "Operating System",
+    "serialNumber": "Serial Number",
+    "imei": "IMEI",
+    "actions": "Actions",
+    "sync": "Sync",
+    "wipe": "Wipe",
+    "retire": "Retire",
+    "delete": "Delete",
+    "searchDevices": "Search devices...",
+    "filterByCompliance": "Filter by compliance",
+    "filterByOS": "Filter by OS",
+    "allDevices": "All Devices",
+    "loadingDevices": "Loading devices...",
+    "noDevicesFound": "No devices found",
+    "syncSuccess": "Device sync initiated",
+    "wipeSuccess": "Device wipe initiated",
+    "retireSuccess": "Device retire initiated",
+    "deleteSuccess": "Device deleted",
+    "actionError": "Action failed",
+    "confirmWipe": "Are you sure you want to wipe this device?",
+    "confirmRetire": "Are you sure you want to retire this device?",
+    "confirmDelete": "Are you sure you want to delete this device?"
   },
   "settings": {
     "title": "Settings",
@@ -118,7 +288,40 @@
     "preferences": "Preferences",
     "security": "Security",
     "saveSettings": "Save Settings",
-    "resetToDefault": "Reset to Default"
+    "resetToDefault": "Reset to Default",
+    "azureConfig": "Azure AD Configuration",
+    "azureConfigDesc": "Configure your Azure Active Directory application settings",
+    "clientId": "Client ID",
+    "clientIdPlaceholder": "Enter your Azure AD Client ID",
+    "clientIdHelp": "Found in Azure Portal → App Registrations → Your App → Overview",
+    "tenantId": "Tenant ID",
+    "tenantIdPlaceholder": "Enter your Azure AD Tenant ID",
+    "tenantIdHelp": "Your organization's unique Azure AD identifier",
+    "clientSecret": "Client Secret (Optional)",
+    "clientSecretPlaceholder": "Enter client secret if using backend",
+    "clientSecretHelp": "Required for certain admin operations. Create in Azure Portal → App Registrations → Certificates & secrets",
+    "clearConfiguration": "Clear Configuration",
+    "saving": "Saving...",
+    "saveConfiguration": "Save Configuration",
+    "configSaved": "Configuration saved successfully",
+    "configCleared": "Configuration cleared",
+    "userPreferences": "User Preferences",
+    "userPreferencesDesc": "Customize your portal experience",
+    "enableNotifications": "Enable Notifications",
+    "enableNotificationsDesc": "Show toast notifications for actions",
+    "autoRefresh": "Auto Refresh",
+    "autoRefreshDesc": "Automatically refresh data every 5 minutes",
+    "compactView": "Compact View",
+    "compactViewDesc": "Show more information in less space",
+    "demoMode": "Demo Mode",
+    "demoModeActive": "Demo Mode Active",
+    "demoModeDesc": "Using demonstration credentials",
+    "toggleDemoMode": "Toggle Demo Mode",
+    "permissionStatus": "Permission Status",
+    "permissionStatusDesc": "Your current Microsoft Graph API permissions",
+    "granted": "Granted",
+    "notGranted": "Not Granted",
+    "checking": "Checking..."
   },
   "faq": {
     "title": "Frequently Asked Questions",
@@ -276,7 +479,12 @@
     "unauthorized": "You are not authorized to perform this action.",
     "notFound": "The requested resource was not found.",
     "serverError": "Server error. Please try again later.",
-    "validationError": "Please check your input and try again."
+    "validationError": "Please check your input and try again.",
+    "pageNotFound": "Page Not Found",
+    "pageNotFoundMessage": "Sorry, we couldn't find the page you're looking for.",
+    "pageNotFoundDesc": "The page you're looking for might have been moved, deleted, or never existed.",
+    "goHome": "Go to Dashboard",
+    "errorCode": "Error Code"
   },
   "notifications": {
     "success": "Operation completed successfully",
