--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -56,6 +56,7 @@
     "userSearch": "User Search",
     "onboarding": "Onboarding",
     "offboarding": "Offboarding",
+    "transfer": "Transfer",
     "scheduledOffboarding": "Scheduled Offboarding",
     "workflows": "Lifecycle Workflows",
     "deviceManagement": "Device Management",
