Add comprehensive distribution groups and security groups support
Features Added:
- GroupManagement: Full CRUD for distribution lists, security groups, and M365 groups
- GroupDetails: View/edit members, owners, and group properties
- CreateGroup: Wizard for creating all group types with validation
- GroupSelector: Reusable component for group selection in wizards

API Enhancements (msalGraphService):
- createGroup() - Create distribution, security, or M365 groups
- updateGroup() - Update group properties
- deleteGroup() - Delete groups
- searchGroups() - Search with type filtering
- getGroupOwners() - Get group owners
- addGroupOwner() - Add owners to groups
- removeGroupOwner() - Remove owners from groups
- getDistributionGroupSettings() - Get comprehensive group info

UI Components:
- GroupManagement: Browse, filter, search groups with stats cards
- GroupDetails: Manage members/owners with autocomplete search
- CreateGroup: Type selection (distribution/security/M365) with validation
- GroupSelector: Reusable dropdown for multi/single group selection

Navigation & Routes:
- Added /groups route for group management
- Added /groups/create for group creation
- Added /groups/:groupId for group details
- Added /groups/:groupId/edit for editing
- Added 'Groups' to main navigation with UserGroupIcon

Features:
- Real-time search with 500ms debounce
- Type badges (Distribution/Security/M365)
- Member and owner management with autocomplete
- Mobile responsive tables and layouts
- Stats dashboard with type filtering
- Delete confirmation dialogs
- Toast notifications for all actions
- Progressive disclosure on mobile

Reusable Patterns:
- GroupSelector can be integrated into onboarding/offboarding wizards
- Consistent UX patterns matching existing wizards
- Autocomplete search matching user selection patterns
- Responsive design matching application standards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,6 +63,7 @@
     "complianceManagement": "Compliance Management",
     "teamsManagement": "Teams Management",
     "defenderManagement": "Defender Management",
+    "groupManagement": "Groups",
     "faq": "FAQ",
     "settings": "Settings",
     "appTitle": "Employee Life Cycle Portal"
