feat: Make GroupManagement mobile-friendly with complete i18n support
Mobile improvements:
- Responsive table with truncated text on mobile
- Show type badge and email under group name on small screens
- Reduced padding on mobile (px-4 instead of px-6)
- Added min-w-0 and truncate classes for text overflow
- Touch-friendly button spacing and padding
- Better flex layouts for mobile content

i18n improvements:
- Added comprehensive groups translation section
- Translated all static text (title, subtitle, buttons, labels)
- Translated toast messages (success/error)
- Translated confirmation dialogs with interpolation
- Translated badge labels (Distribution, Security, M365)
- Added aria-labels for accessibility

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,6 +242,35 @@
     "transferData": "Transfer Data",
     "updateGroups": "Update Group Memberships"
   },
+  "groups": {
+    "title": "Group Management",
+    "subtitle": "Manage distribution lists, security groups, and Microsoft 365 groups",
+    "createGroup": "Create Group",
+    "allGroups": "All Groups",
+    "distributionLists": "Distribution Lists",
+    "securityGroups": "Security Groups",
+    "microsoft365": "Microsoft 365",
+    "searchPlaceholder": "Search groups by name, email, or description...",
+    "groupsCount": "Groups",
+    "noGroupsFound": "No groups found",
+    "adjustFilters": "Try adjusting your search or filters",
+    "getStarted": "Get started by creating a new group",
+    "groupName": "Group",
+    "type": "Type",
+    "email": "Email",
+    "description": "Description",
+    "actions": "Actions",
+    "edit": "Edit",
+    "delete": "Delete",
+    "deleteConfirm": "Are you sure you want to delete the group \"{{groupName}}\"?",
+    "deleteSuccess": "Group deleted successfully",
+    "deleteFailed": "Failed to delete group",
+    "loadFailed": "Failed to load groups",
+    "distribution": "Distribution",
+    "security": "Security",
+    "m365": "M365",
+    "refresh": "Refresh"
+  },
   "devices": {
     "title": "Device Management",
     "deviceName": "Device Name",
