fix: Add missing i18n translations for MSALLogin page
- Added microsoftSSO, microsoftSSODescription, useM365Account translations
- Added signInMicrosoft, benefits, ssoSecurity, mfaSupport, yourPermissions
- Added customTenant, customTenantDescription, customTenantInfo translations
- Added signInCustom, configuring translations
- Removed duplicate 'loading' key
- All login page text now properly internationalized

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -396,10 +396,24 @@
     "authenticating": "Authenticating...",
     "authSuccess": "Successfully authenticated with app credentials",
     "authFailed": "Authentication failed. Please check your credentials.",
-    "rememberCredentials": "Remember my credentials on this device",
-    "clearSavedCredentials": "Clear Saved Credentials",
+    "rememberCredentials": "Remember my credentials",
+    "clearSavedCredentials": "Clear",
     "credentialsCleared": "Saved credentials cleared",
     "savedCredentialsLoaded": "Saved credentials loaded",
+    "microsoftSSO": "Microsoft SSO",
+    "microsoftSSODescription": "Sign in with your organization account",
+    "useM365Account": "Use your Microsoft 365 account to access the portal",
+    "signInMicrosoft": "Sign in with Microsoft",
+    "benefits": "Benefits",
+    "ssoSecurity": "Secure SSO authentication",
+    "mfaSupport": "MFA support",
+    "yourPermissions": "Uses your permissions",
+    "customTenant": "Custom Tenant",
+    "customTenantDescription": "Use your own Azure app credentials",
+    "customTenantInfo": "What is this?",
+    "customTenantInfoDescription": "Use your own Azure app registration to authenticate with full control over permissions and scopes.",
+    "signInCustom": "Sign in with Custom Tenant",
+    "configuring": "Configuring...",
     "whyTeamsLove": "Why Teams Love This Portal",
     "secureSSO": "🔐 Secure single sign-on with Clerk authentication",
     "streamlinedHR": "👥 Streamlined employee onboarding & offboarding",
